<resources>
    <string name="app_name">Echallan</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>


    <string name="action_settings">Settings</string>
    <string name="txt_footer">Traffic Challan Management System\nIslamabad Traffic Police</string>
    <string name="txt_header_login">Traffic Challan Management System\nIslamabad Traffic Police</string>
    <string name="violatorInfoheader">Violator Information</string>
    <string name="vehicleInfo">Vehicle Information</string>
    <string name="Date">TODAY:</string>
    <string name="submit">SUBMIT</string>
    <string name="violatorinfotitle"><u>Violator Information</u>.</string>
    <string name="doc">Document Handover دستاویز حوالے کریں </string>
    <string name="reviewchallaninfo">REVIEW CHALLAN INFO</string>
    <string name="ticketid">eTICKET ID:112</string>
    <string name="violatorname">Violator Name:</string>
    <string name="violatorcnic">Violator CNIC:</string>
    <string name="documenttype">Document Type:</string>
    <string name="totalpayable">Total Payable:</string>
    <string name="offensecode">Offense Code:</string>
    <string name="Violation">Violation:</string>
    <string name="Fine">Fine:</string>
    <string name="my_text">This is an <u>underline</u>.</string>
    <string name="violationdetail"><u>Violation(s) Detail:</u>.</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_progress_dialog">Please wait.</string>
    <string name="body_progress_dialog">Loading..</string>
    <string name="error_login_403">Incorrect Credentials</string>
    <string name="error_rate_500">Server error, please try again later.</string>
    <string name="error_No_Internet">No internet connection.</string>
    <string name="error_field_required">This  field is required.</string>
    <string name="valid_email">Please enter a valid email address.</string>
    <string name="nextbtn">NEXT</string>
    <string name="txt_under_age">Under Age</string>
    <string name="form_submitting">Uploading......</string>
    <string name="selection_header_title">Please Select Violations(Max. 5)</string>
    <string name="violationinormationheader">VIOLATION INFORMATION</string>
    <string name="eTicket">eTicket ID:</string>
    <string name="handovertobranch">HANDOVER TO BRANCH</string>
    <string name="handovertoviolator">HANDOVER TO VIOLATOR</string>
    <string name="Searchbtn">SEARCH</string>
    <string name="handover">HANDOVER</string>
    <string name="status">Status:</string>
    <string name="challandate">Challan Date:</string>
    <string name="zone">Zone:</string>
</resources>
