<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <TextView
        android:id="@+id/textView44"
        android:layout_width="wrap_content"
        android:layout_height="18dp"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="40dp"
        android:fontFamily="Montserrat"
        android:text="@string/violatorinfotitle"
        android:textColor="@color/Sumarycolor"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/textView46"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:fontFamily="Montserrat"
        android:text="@string/violatorname"
        android:textColor="@color/lightblack"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintStart_toStartOf="@+id/textView44"
        app:layout_constraintTop_toBottomOf="@+id/textView44" />


    <TextView
        android:id="@+id/textView47"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="Montserrat"
        android:text="TextView"
        android:textColor="@color/Sumarycolor"
        app:layout_constraintBottom_toBottomOf="@+id/textView46"
        app:layout_constraintHorizontal_bias="0.609"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textView46"
        app:layout_constraintVertical_bias="1.0" />


    <TextView
        android:id="@+id/textView48"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:fontFamily="Montserrat"
        android:text="@string/violatorcnic"
        android:textColor="@color/lightblack"
        app:layout_constraintStart_toStartOf="@+id/textView44"
        app:layout_constraintTop_toBottomOf="@+id/textView46" />

    <TextView
        android:id="@+id/textView49"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="TextView"
        android:textColor="@color/Sumarycolor"
        android:fontFamily="Montserrat"
        app:layout_constraintBottom_toBottomOf="@+id/textView48"
        app:layout_constraintStart_toStartOf="@+id/textView47"
        app:layout_constraintTop_toTopOf="@+id/textView48"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/textView50"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:fontFamily="Montserrat"
        android:text="@string/documenttype"
        android:textColor="@color/lightblack"
        app:layout_constraintStart_toStartOf="@+id/textView44"
        app:layout_constraintTop_toBottomOf="@+id/textView48" />


    <TextView
        android:id="@+id/textView51"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="TextView"
        android:fontFamily="Montserrat"
        android:textColor="@color/Sumarycolor"
        app:layout_constraintBottom_toBottomOf="@+id/textView50"
        app:layout_constraintStart_toStartOf="@+id/textView49"
        app:layout_constraintTop_toTopOf="@+id/textView50"
        app:layout_constraintVertical_bias="1.0" />


    <TextView
        android:id="@+id/textView52"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:fontFamily="Montserrat"
        android:text="@string/totalpayable"
        android:textColor="@color/lightblack"
        app:layout_constraintStart_toStartOf="@+id/textView44"
        app:layout_constraintTop_toBottomOf="@+id/textView50" />


    <TextView
        android:id="@+id/textView53"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="TextView"
        android:textColor="@color/Sumarycolor"
        android:fontFamily="Montserrat"
        app:layout_constraintBottom_toBottomOf="@+id/textView52"
        app:layout_constraintStart_toStartOf="@+id/textView51"
        app:layout_constraintTop_toTopOf="@+id/textView52"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/textView54"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="20dp"
        android:fontFamily="Montserrat"
        android:text="@string/violationdetail"
        android:textColor="@color/Sumarycolor"
        app:layout_constraintEnd_toEndOf="@+id/textView52"
        app:layout_constraintHorizontal_bias="0.275"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintStart_toStartOf="@+id/textView44"
        app:layout_constraintTop_toBottomOf="@+id/textView52" />

    <TextView
        android:id="@+id/textView62"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="12dp"
        android:fontFamily="Montserrat"
        android:text="@string/offensecode"
        android:textColor="@color/lightblack"
        app:layout_constraintEnd_toEndOf="@+id/textView54"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintStart_toStartOf="@+id/textView54"
        app:layout_constraintTop_toBottomOf="@+id/textView54" />

    <TextView
        android:id="@+id/textView64"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="36dp"
        android:layout_marginTop="8dp"
        android:fontFamily="Montserrat"
        android:text="1"

        android:textColor="@color/Sumarycolor"
        app:layout_constraintBottom_toBottomOf="@+id/textView62"
        app:layout_constraintEnd_toStartOf="@+id/textView53"
        app:layout_constraintTop_toTopOf="@+id/textView62"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/textView65"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:fontFamily="Montserrat"
        android:text="@string/Violation"
        android:textColor="@color/lightblack"
        app:layout_constraintStart_toStartOf="@+id/textView54"
        app:layout_constraintTop_toBottomOf="@+id/textView62" />

    <TextView
        android:id="@+id/textView66"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="Montserrat"
        android:text="Exceeding prescibed"
        android:textColor="@color/Sumarycolor"
        app:layout_constraintBottom_toBottomOf="@+id/textView65"
        app:layout_constraintStart_toStartOf="@+id/textView64"
        app:layout_constraintTop_toTopOf="@+id/textView65"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/textView67"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="12dp"
        android:text="@string/Fine"
        android:textColor="@color/lightblack"
        android:fontFamily="Montserrat"
        app:layout_constraintEnd_toEndOf="@+id/textView65"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintStart_toStartOf="@+id/textView65"
        app:layout_constraintTop_toBottomOf="@+id/textView65" />

    <TextView
        android:id="@+id/textView68"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="(200)"
        android:fontFamily="Montserrat"
        android:textColor="@color/red"
        app:layout_constraintBottom_toBottomOf="@+id/textView67"
        app:layout_constraintStart_toStartOf="@+id/textView66"
        app:layout_constraintTop_toTopOf="@+id/textView67"
        app:layout_constraintVertical_bias="1.0" />


</android.support.constraint.ConstraintLayout>